# aws-status-report-api

./: pyproject.toml
app/: main.py  service.py  services.py
