[tool.poetry]
name = "aws-vpc-metrics-collector"
version = "0.1.0"
description = "Uma ferramenta para coletar métricasda AWS"
authors = ["Diogo Rocha <diogo.araujo@sistemafiepe.org.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.0"
boto3 = "^1.28.0"
pydantic = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''